--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        sourceSets.main{
+            jniLibs.srcDir 'src/main/libs'
+            jni.srcDirs = [] //将native方法不加入编译规则
+        }
+
+
+
     }
     buildTypes {
         release {
